# simio

./: .clang-format  .gitignore  CMakeLists.txt  README.md  interest.h  library.h  poll.h  token.h  waker.h
event/: event.h  event_list.h  source.h
example/: CMakeLists.txt  tcp_discard.cpp  tcp_echo.cpp  tcp_ping_pong.cpp
include/: simio.h
include/simio/: base.h  event.h  io_source.h  poll.h  sys.h  tcp.h  unix.h
include/simio/base/: buffer.h  channel.h  interest.h  noncopyable.h  poll.h  registry.h  socket_addr.h  token.h  waker.h
include/simio/net/: tcp_listener.h  tcp_socket.h  tcp_stream.h
include/simio/reactor/: acceptor.h  event_loop.h  server.h  task.h  worker.h
include/simio/unix/: epoll.h  event.h  io_source_state.h  socket.h  waker.h
net/tcp/: address.h  socket.h
simio/: CMakeLists.txt
simio/net/: tcp_listener.cpp  tcp_stream.cpp
simio/reactor/: event_loop.cpp
simio/sys/unix/: epoll.cpp  source_fd.h  tcp.cpp  waker.cpp
simio/unix/: epoll.cpp  event.cpp  file_desp.cpp  socket.cpp  tcp.cpp
sys/: target_os.h
sys/unix/: net.h  pipe.h  source_fd.h  tcp.h  waker.cpp  waker.h
sys/unix/selector/: epoll.cpp  epoll.h
test/: CMakeLists.txt  gtest_example.cpp  test_socket_addr.cpp  test_tcp_connect.cpp  test_tcp_socket.cpp  test_unix_socket.cpp
test/base/: CMakeLists.txt  test_channel.cpp  test_interest.cpp  test_waker_event.cpp
test/googletest/googlemock/docs/: cook_book.md
test/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-generated-actions.h  gmock-generated-function-mockers.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h  gmock.h
test/googletest/googlemock/include/gmock/internal/: gmock-internal-utils.h
test/googletest/googlemock/scripts/: gmock-config.in
test/googletest/googlemock/src/: gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
test/googletest/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-pp-string_test.cc  gmock-pp_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc
test/googletest/googletest/: README.md
test/googletest/googletest/cmake/: internal_utils.cmake
test/googletest/googletest/docs/: advanced.md
test/googletest/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest.h  gtest_pred_impl.h
test/googletest/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
test/googletest/googletest/samples/: prime_tables.h  sample10_unittest.cc  sample1_unittest.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample4.h  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
test/googletest/googletest/scripts/: gtest-config.in
test/googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-matchers.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
test/googletest/googletest/test/: googletest-break-on-failure-unittest_.cc  googletest-catch-exceptions-test_.cc  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-env-var-test_.cc  googletest-filepath-test.cc  googletest-filter-unittest_.cc  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-message-test.cc  googletest-options-test.cc  googletest-output-test_.cc  googletest-param-test-invalid-name1-test_.cc  googletest-param-test-invalid-name2-test_.cc  googletest-param-test-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-shuffle-test_.cc  googletest-test-part-test.cc  googletest-test2_test.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_environment_test.cc  gtest_help_test_.cc  gtest_pred_impl_unittest.cc  gtest_premature_exit_test.cc  gtest_repeat_test.cc  gtest_skip_in_environment_setup_test.cc  gtest_skip_test.cc  gtest_sole_header_test.cc  gtest_stress_test.cc  gtest_unittest.cc  gtest_xml_outfile1_test_.cc  gtest_xml_outfile2_test_.cc  gtest_xml_output_unittest_.cc  production.h
